--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 
 html {
-  font-size: 90%;
+  font-size: 62.5%;
   overflow-x: hidden;
 }
 
@@ -29,8 +29,8 @@ body {
 }
 
 section {
-    min-height: 100vh;
-    padding: 10rem 9% 2rem;
+  min-height: 100vh;
+  padding: 10rem 9% 2rem;
 }
 
 .header {
@@ -57,46 +57,92 @@ section {
   font-size: 1.7rem;
   color: var(--text-color);
   margin-left: 4rem;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .navbar a:hover,
-.navbar a.active  {
-    color: var(--main-color);
+.navbar a.active {
+  color: var(--main-color);
 }
 
 #menu-icon {
-    font-size: 3.6rem;
-    color: var(--text-color);
-    display: none;
+  font-size: 3.6rem;
+  color: var(--text-color);
+  display: none;
 }
 
 .home {
-    display: flex;
-    justify-content: center;
-    align-items:center;
-   
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-img img {
-width: 35vw;
-margin-left: 10rem;
-
+  width: 35vw;
+  margin-left: 10rem;
 }
-
 
 .home-content h3 {
-font-size: 3.2rem;
-font-weight: 700;
- white-space: nowrap;
+  font-size: 3.2rem;
+  font-weight: 700;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-
 }
+
+.home-content h3:nth-of-type(2) {
+    margin-bottom: 2rem;
+}
+
+span {
+    color: var(--main-color);
+}
+
 
 .home-content h1 {
-font-size: 5.6rem;
-font-weight: 700;
-line-height: 1.3;
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 1.3;
 }
 
+.home-content p {
+  font-size: 1.6rem;
+}
+
+.social-media a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  background: transparent;
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+}
+
+.social-media a:hover {
+    background: var(--main-color);
+    color: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
+
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+}
+
+.btn:hover {
+    box-shadow: none;
+}
