--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,26 @@ span {
     gap: 2rem;
 
 }
+
+.services-container .services-box {
+flex: 1 1 30rem;
+background: var(--second-bg-color);
+padding: 3rem 2rem 4rem;
+border-radius: 2rem;
+text-align: center;
+border: .2rem solid var(--bg-color);
+}
+
+.services-box i {
+font-size: 7rem;
+color: var(--main-color);
+}
+
+.services-box h3 {
+    font-size: 2.6rem;
+}
+
+.services-box p {
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
