--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,13 @@ text-align: center;
 border: .2rem solid var(--bg-color);
 }
 
+.services-container .services-box:hover {
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+
+
+
 .services-box i {
 font-size: 7rem;
 color: var(--main-color);
@@ -211,4 +218,31 @@ color: var(--main-color);
 .services-box p {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
+}
+
+.portfolio {
+    background: var(--second-bg-color);
+}
+
+.portfolio h2 {
+    margin-bottom: 4rem;
+}
+
+.portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.portfolio-container .services-box {
+    position: relative;
+     border-radius: 2rem;
+     box-shadow: 0 0 1rem var(--bg-color);
+     overflow: hidden;
+     display: flex;
+}
+
+.services-box img {
+    width: 100%;
 }
