--- a/css/style.css
+++ b/css/style.css
@@ -246,3 +246,23 @@ color: var(--main-color);
 .services-box img {
     width: 100%;
 }
+
+.portfolio-box .portfolio-layer {
+    position:absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+}
+
+.portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem var(--bg-color);
+  overflow: hidden;
+  display: flex;
+  height: 300px; /* Adjust the height as needed */
+}
+
+
