--- a/css/style.css
+++ b/css/style.css
@@ -176,93 +176,132 @@ span {
   margin: 2rem 0 3rem;
 }
 
-
 .services h2 {
-    margin-bottom: 5rem;
+  margin-bottom: 5rem;
 }
 
 .services-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
 
 .services-container .services-box {
-flex: 1 1 30rem;
-background: var(--second-bg-color);
-padding: 3rem 2rem 4rem;
-border-radius: 2rem;
-text-align: center;
-border: .2rem solid var(--bg-color);
+  flex: 1 1 30rem;
+  background: var(--second-bg-color);
+  padding: 3rem 2rem 4rem;
+  border-radius: 2rem;
+  text-align: center;
+  border: 0.2rem solid var(--bg-color);
 }
 
 .services-container .services-box:hover {
-    border-color: var(--main-color);
-    transform: scale(1.02);
+  border-color: var(--main-color);
+  transform: scale(1.02);
 }
 
-
-
 .services-box i {
-font-size: 7rem;
-color: var(--main-color);
+  font-size: 7rem;
+  color: var(--main-color);
 }
 
 .services-box h3 {
-    font-size: 2.6rem;
+  font-size: 2.6rem;
 }
 
 .services-box p {
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
+  font-size: 1.6rem;
+  margin: 1rem 0 3rem;
 }
 
 .portfolio {
-    background: var(--second-bg-color);
+  background: var(--second-bg-color);
 }
 
 .portfolio h2 {
-    margin-bottom: 4rem;
+  margin-bottom: 4rem;
 }
 
 .portfolio-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    gap: 2.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 2.5rem;
 }
 
 .portfolio-container .services-box {
-    position: relative;
-     border-radius: 2rem;
-     box-shadow: 0 0 1rem var(--bg-color);
-     overflow: hidden;
-     display: flex;
-}
-
-.services-box img {
-    width: 100%;
-}
-
-.portfolio-box .portfolio-layer {
-    position:absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
-}
-
-.portfolio-box {
   position: relative;
   border-radius: 2rem;
   box-shadow: 0 0 1rem var(--bg-color);
   overflow: hidden;
   display: flex;
-  height: 300px; /* Adjust the height as needed */
+}
+
+.services-box img {
+  width: 100%;
+  transition: 0.5s ease;
+}
+
+.services-box img:hover {
+  transform: scale(1.1);
+}
+
+.portfolio-box .portfolio-layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgb(0, 7, 22), var(--main-color));
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  transform: translateY(100%);
+  transition: .5s ease;
 }
 
 
+.portfolio-box:hover .portfolio-layer {
+  transform: translateY(0%)  
+}
+
+
+/* Extra part */
+
+.portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 2rem var(--bg-color);
+  overflow: hidden;
+  display: flex;
+  height: 300px; /* Adjust the height as needed */
+  
+}
+
+.portfolio-layer h4 {
+  font-size: 3rem;
+}
+
+.portfolio-layer p {
+  font-size: 1.6rem;
+  margin: 0.3rem 0 1rem;
+}
+
+.portfolio-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background: var(--text-color);
+  border-radius: 50%;
+}
+
+.portfolio-layer a i {
+  font-size: 2rem;
+  color: var(--second-bg-color);
+}
