--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,11 @@ span {
     background: var(--bg-color);
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
   }
 
   .navbar a {
@@ -425,3 +430,4 @@ span {
     margin: 3rem 0;
   }
 }
+
