--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ section {
 
 .home-img img {
   width: 35vw;
-  margin-left: 10rem;
+  /* margin-left: 10rem; */
 }
 
 .home-content h3 {
@@ -398,6 +398,18 @@ span {
     padding: 10rem 3% 2rem;
   }
 
+  .services {
+    padding-bottom: 7rem;
+  }
+
+  .portfolio {
+    padding-bottom: 7rem;
+  }
+
+  .contact {
+    min-height: auto;
+  }
+
   .footer {
     padding: 2rem 3%;
   }
@@ -429,5 +441,48 @@ span {
     font-size: 2rem;
     margin: 3rem 0;
   }
+
+  .home {
+    flex-direction: column;
+  }
+
+  .home-content h3 {
+    font-size: 2.6rem;
+  }
+
+    .home-content h1 {
+    font-size: 5rem;
+  }
+
+  .home-img img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .about {
+    flex-direction: column-reverse;
+  }
+
+  .about img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .services h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
+@media (max-width: 617px) {
+    .portfolio-container {
+        grid-template-columns: 1fr;
+    }
+}
