--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,22 @@ section {
 
 .home-img img {
   width: 35vw;
+  animation: floatImage 4s ease-in-out infinite;
   /* margin-left: 10rem; */
 }
+
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+      50% {
+        transform: translateY(-2.4rem);
+    }
+      10% {
+        transform: translateY(0);
+    }
+}
+
 
 .home-content h3 {
   font-size: 3.2rem;
