typed text js added

--- a/css/style.css
+++ b/css/style.css
@@ -84,21 +84,23 @@ section {
 .home-img img {
   width: 35vw;
   animation: floatImage 4s ease-in-out infinite;
+  border-radius: 50%; /* Make the border circular */
+  box-shadow: 0 0 10rem var(--main-color);
+  font-size: 1.6rem;
   /* margin-left: 10rem; */
 }
 
 @keyframes floatImage {
-    0% {
-        transform: translateY(0);
-    }
-      50% {
-        transform: translateY(-2.4rem);
-    }
-      10% {
-        transform: translateY(0);
-    }
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-2.4rem);
+  }
+  10% {
+    transform: translateY(0);
+  }
 }
-
 
 .home-content h3 {
   font-size: 3.2rem;
@@ -173,6 +175,10 @@ span {
 
 .about-img img {
   width: 35vw;
+  border-radius: 50%; /* Make the border circular */
+ border: 1.5rem solid rgb(0, 251, 255);
+  font-size: 1.6rem;
+  margin-right: 6rem;
 }
 
 .heading {
