--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgb(0, 7, 22), var(--main-color));
+  background: linear-gradient(var(--bg-color), var(--second-bg-color));
   justify-content: center;
   align-items: center;
   flex-direction: column;
